# core-rs

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml  rustfmt.toml
.github/workflows/: auto-tag.yml  bump-version.yml  ci.yml  develop.yml  release.yml  tag-release.yml
src/: lib.rs  main.rs  types.rs
src/commands/: create_java_file_command.rs  create_jpa_entity_basic_field_command.rs  create_jpa_entity_command.rs  create_jpa_entity_enum_field_command.rs  create_jpa_entity_id_field_command.rs  create_jpa_many_to_one_relationship_command.rs  create_jpa_one_to_one_relationship_command.rs  create_jpa_repository_command.rs  get_all_files_command.rs  get_all_jpa_entities_command.rs  get_all_jpa_mapped_superclasses.rs  get_all_packages_command.rs  get_id_field_types_command.rs  get_java_basic_types_command.rs  get_java_files_command.rs  get_jpa_entity_info_command.rs  mod.rs
src/common/: mod.rs  query.rs  ts_file.rs
src/responses/: basic_java_type.rs  basic_java_type_response.rs  create_entity_field_response.rs  create_jpa_one_to_one_relationship_response.rs  create_jpa_repository_response.rs  create_many_to_one_relationship_response.rs  error_response.rs  file_response.rs  get_all_files_response.rs  get_files_response.rs  get_jpa_entity_info_response.rs  get_packages_response.rs  mod.rs  package_response.rs  (+1 more)
tests/: annotation_service_tests.rs  class_declaration_service_tests.rs  field_declaration_service_tests.rs  import_declaration_service_tests.rs  interface_declaration_service_tests.rs  package_declaration_service_tests.rs  path_security_util_tests.rs
(+80 files in other folders)
