[package]
name = "syntaxpresso-core"
version = "0.0.14"
edition = "2024"
repository = "https://github.com/syntaxpresso/core"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5.0"
tree-sitter = "0.25.10"
tree-sitter-java = "0.23.5"
thiserror = "2.0.17"
heck = "0.5.0"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
